// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <OrdersSelectable /> should renders with all props correctly 1`] = `
<div>
  <div
    className="form-group"
  >
    <div
      className="selectable"
    >
      <div
        className="selectable-col selectable-from"
      >
        <label
          className="control-label"
          htmlFor=""
        >
          Available Orders
        </label>
        <div
          className="selectable-list"
        >
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Xray Chest X-ray
            </span>
          </div>
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Radiology-CT Head
            </span>
          </div>
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Cardiac-ECG
            </span>
          </div>
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Physio-crutches
            </span>
          </div>
        </div>
      </div>
      <div
        className="selectable-control"
      >
        <div
          className="selectable-control-group"
        >
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            ›
          </div>
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            »
          </div>
        </div>
        <div
          className="selectable-control-group"
        >
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            ‹
          </div>
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            «
          </div>
        </div>
      </div>
      <div
        className="selectable-col selectable-to"
      >
        <label
          className="control-label"
          htmlFor=""
        >
          Selected Orders
        </label>
        <div
          className="selectable-list"
        />
      </div>
    </div>
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group right"
      >
        <PTButton
          className="btn btn-success btn-inverse btn-create disabled"
          onClick={[Function]}
        >
          <i
            className="btn-icon fa fa-plus"
          />
          <span
            className="btn-text"
          >
             Create
          </span>
        </PTButton>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <OrdersSelectable /> should renders with all props correctly 2`] = `
<div>
  <div
    className="form-group"
  >
    <div
      className="selectable"
    >
      <div
        className="selectable-col selectable-from"
      >
        <label
          className="control-label"
          htmlFor=""
        >
          Available Orders
        </label>
        <div
          className="selectable-list"
        />
      </div>
      <div
        className="selectable-control"
      >
        <div
          className="selectable-control-group"
        >
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            ›
          </div>
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            »
          </div>
        </div>
        <div
          className="selectable-control-group"
        >
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            ‹
          </div>
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            «
          </div>
        </div>
      </div>
      <div
        className="selectable-col selectable-to"
      >
        <label
          className="control-label"
          htmlFor=""
        >
          Selected Orders
        </label>
        <div
          className="selectable-list"
        >
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Xray Chest X-ray
            </span>
          </div>
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Radiology-CT Head
            </span>
          </div>
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Cardiac-ECG
            </span>
          </div>
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Physio-crutches
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group right"
      >
        <PTButton
          className="btn btn-success btn-inverse btn-create"
          onClick={[Function]}
        >
          <i
            className="btn-icon fa fa-plus"
          />
          <span
            className="btn-text"
          >
             Create
          </span>
        </PTButton>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <OrdersSelectable /> should renders with all props correctly 3`] = `
<div>
  <div
    className="form-group"
  >
    <div
      className="selectable"
    >
      <div
        className="selectable-col selectable-from"
      >
        <label
          className="control-label"
          htmlFor=""
        >
          Available Orders
        </label>
        <div
          className="selectable-list"
        />
      </div>
      <div
        className="selectable-control"
      >
        <div
          className="selectable-control-group"
        >
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            ›
          </div>
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            »
          </div>
        </div>
        <div
          className="selectable-control-group"
        >
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            ‹
          </div>
          <div
            className="btn btn-inverse btn-success btn-order"
            onClick={[Function]}
          >
            «
          </div>
        </div>
      </div>
      <div
        className="selectable-col selectable-to"
      >
        <label
          className="control-label"
          htmlFor=""
        >
          Selected Orders
        </label>
        <div
          className="selectable-list"
        >
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Xray Chest X-ray
            </span>
          </div>
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Radiology-CT Head
            </span>
          </div>
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Cardiac-ECG
            </span>
          </div>
          <div
            className="selectable-item"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <span>
              Physio-crutches
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group right"
      >
        <PTButton
          className="btn btn-success btn-inverse btn-create"
          onClick={[Function]}
        >
          <i
            className="btn-icon fa fa-plus"
          />
          <span
            className="btn-text"
          >
             Create
          </span>
        </PTButton>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <OrdersSelectable /> should renders with all props correctly 4`] = `
<div>
  <div
    className="row-expand"
  >
    <div
      className="col-expand-left"
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor=""
        >
          Create Selected Orders?
        </label>
        <ul
          className="orders-choosen-list"
        >
          <li
            className="orders-choosen-item"
          >
            <i
              className="orders-choosen-close fa fa-times-circle"
              onClick={[Function]}
            />
            <span>
               
              Xray Chest X-ray
            </span>
          </li>
        </ul>
        <ul
          className="orders-choosen-list"
        >
          <li
            className="orders-choosen-item"
          >
            <i
              className="orders-choosen-close fa fa-times-circle"
              onClick={[Function]}
            />
            <span>
               
              Radiology-CT Head
            </span>
          </li>
        </ul>
        <ul
          className="orders-choosen-list"
        >
          <li
            className="orders-choosen-item"
          >
            <i
              className="orders-choosen-close fa fa-times-circle"
              onClick={[Function]}
            />
            <span>
               
              Cardiac-ECG
            </span>
          </li>
        </ul>
        <ul
          className="orders-choosen-list"
        >
          <li
            className="orders-choosen-item"
          >
            <i
              className="orders-choosen-close fa fa-times-circle"
              onClick={[Function]}
            />
            <span>
               
              Physio-crutches
            </span>
          </li>
        </ul>
        <div
          className="wrap-control-group"
        >
          <div
            className="control-group right"
          >
            <PTButton
              className="btn btn-primary btn-inverse"
              onClick={[Function]}
            >
              <i
                className="btn-icon fa fa-angle-left"
              />
              <span
                className="btn-text"
              >
                 Back
              </span>
            </PTButton>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
